Product ve Category siniflari icin gerekli testler yazildi